Return URI objects instead of URL objects